Mon May  2 12:34:52 2016  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_refinement.rb (test_inspect): Use Integer instead of
	  Fixnum.

Mon May  2 06:58:38 2016  Tanaka Akira  <akr@fsij.org>

	* complex.c: Don't refer rb_cFixnum and rb_cBignum.
	  (k_fixnum_p): Use FIXNUM_P.
	  (k_bignum_p): Use RB_TYPE_P.

Mon May  2 01:27:59 2016  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_numeric.rb (test_step): Use Integer::FIXNUM_MAX.

Mon May  2 01:15:01 2016  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_module.rb (test_name): Use Integer instead of Fixnum.

Mon May  2 01:00:04 2016  Tanaka Akira  <akr@fsij.org>

	* test/lib/test/unit/assertions.rb (assert_fixnum): Defined.
	  (assert_bignum): Defined.

	* test/ruby/test_bignum.rb: Use assert_bignum.

	* test/ruby/test_integer_comb.rb: Use assert_fixnum and assert_bignum.

	* test/ruby/test_optimization.rb: Ditto.

Mon May  2 00:41:53 2016  Tanaka Akira  <akr@fsij.org>

	* vm_trace.c (recalc_remove_ruby_vm_event_flags): Add a cast to
	  avoid signed integer overflow.

Mon May  2 00:06:04 2016  Tanaka Akira  <akr@fsij.org>

	* test/lib/envutil.rb: Define Integer::{FIXNUM_MIN,FIXNUM_MAX}.

	* test/ruby/test_bignum.rb: Use Integer::{FIXNUM_MIN,FIXNUM_MAX}.

	* test/ruby/test_bignum.rb: Ditto.

	* test/ruby/test_integer_comb.rb: Ditto.

	* test/ruby/test_marshal.rb: Ditto.

	* test/ruby/test_optimization.rb: Ditto.

Sun May  1 23:59:59 2016  Kenta Murata  <mrkn@mrkn.jp>

	* array.c (rb_ary_sum): fix for mathn

	* test/ruby/test_array.rb (test_sum): ditto.

Sun May  1 23:51:54 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/lib/test/unit.rb (Options#non_options): fixed wrong regexp.
	  if both positives and negatives were specified, positives had to
	  be specified from the beginning.

Sun May  1 21:00:07 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c: drop Win2K support.

Sun May  1 20:39:47 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* cont.c, hash.c, random.c, win32/win32.c: cleanup some Win9x/ME/NT4